--- a/configs/repr_table4_3dpw_model.yaml
+++ b/configs/repr_table4_3dpw_model.yaml
@@ -5,10 +5,13 @@ LOGDIR: ''
 DEVICE: 'cuda'
 EXP_NAME: 'tcmr'
 OUTPUT_DIR: 'experiments'
-NUM_WORKERS: 16
+NUM_WORKERS: 0
 SEED_VALUE: 1
 DATASET:
   SEQLEN: 16
+UPDATE_GRAD: True
+NORM_TYPE: "loss"
+MTL: True
 LOSS:
   KP_2D_W: 300.0
   KP_3D_W: 300.0
@@ -22,8 +25,9 @@ TRAIN:
   PRETRAINED_REGRESSOR: 'data/base_data/spin_model_checkpoint.pth.tar'
   RESUME: ''
   START_EPOCH: 0
-  END_EPOCH: 30
-  LR_PATIENCE: 5
+  END_EPOCH: 100
+  LR_DECAY: 0.1
+  LR_PATIENCE: 3
   DATA_2D_RATIO: 0.6
   OVERLAP: true
   DATASETS_2D:
@@ -33,6 +37,7 @@ TRAIN:
     - 'MPII3D'
     - 'Human36M'
   DATASET_EVAL: 'ThreeDPW'
+  GEN_OPTIM: 'Adam'
   GEN_LR: 0.00005
   GEN_WD: 0.0
   MOT_DISCR:
