--- a/configs/repr_table4_3dpw_model.yaml
+++ b/configs/repr_table4_3dpw_model.yaml
@@ -5,13 +5,14 @@ LOGDIR: ''
 DEVICE: 'cuda'
 EXP_NAME: 'tcmr'
 OUTPUT_DIR: 'experiments'
-NUM_WORKERS: 0
-SEED_VALUE: 1
+NUM_WORKERS: 16
+SEED_VALUE: 42
 DATASET:
   SEQLEN: 16
 UPDATE_GRAD: True
-NORM_TYPE: "loss"
-MTL: True
+NORM_TYPE: "none"
+MTL: False
+MTL_START: 15
 LOSS:
   KP_2D_W: 300.0
   KP_3D_W: 300.0
@@ -26,8 +27,8 @@ TRAIN:
   RESUME: ''
   START_EPOCH: 0
   END_EPOCH: 100
-  LR_DECAY: 0.1
-  LR_PATIENCE: 3
+  LR_DECAY: 0.316
+  LR_PATIENCE: 5
   DATA_2D_RATIO: 0.6
   OVERLAP: true
   DATASETS_2D:
@@ -39,6 +40,7 @@ TRAIN:
   DATASET_EVAL: 'ThreeDPW'
   GEN_OPTIM: 'Adam'
   GEN_LR: 0.00005
+  GEN_MOMENTUM: 0.9
   GEN_WD: 0.0
   MOT_DISCR:
     OPTIM: 'Adam'
