--- a/configs/repr_table4_3dpw_model.yaml
+++ b/configs/repr_table4_3dpw_model.yaml
@@ -11,8 +11,9 @@ DATASET:
   SEQLEN: 16
 UPDATE_GRAD: True
 NORM_TYPE: "none"
-MTL: False
+MTL: True
 MTL_START: 15
+MTL_METHOD: "MGDA_UB"
 LOSS:
   KP_2D_W: 300.0
   KP_3D_W: 300.0
