--- a/configs/repr_table4_h36m_mpii3d_model.yaml
+++ b/configs/repr_table4_h36m_mpii3d_model.yaml
@@ -9,6 +9,11 @@ NUM_WORKERS: 16
 SEED_VALUE: 1
 DATASET:
   SEQLEN: 16
+UPDATE_GRAD: True
+NORM_TYPE: "loss"
+MTL: False
+MTL_START: 15
+MTL_METHOD: "MGDA_UB"
 LOSS:
   KP_2D_W: 300.0
   KP_3D_W: 300.0
