--- a/configs/repr_table4_3dpw_model.yaml
+++ b/configs/repr_table4_3dpw_model.yaml
@@ -6,20 +6,20 @@ DEVICE: 'cuda'
 EXP_NAME: 'tcmr'
 OUTPUT_DIR: 'experiments'
 NUM_WORKERS: 16
-SEED_VALUE: 42
+SEED_VALUE: 1
 DATASET:
   SEQLEN: 16
 UPDATE_GRAD: True
-NORM_TYPE: "none"
-MTL: True
+NORM_TYPE: "loss"
+MTL: False
 MTL_START: 15
 MTL_METHOD: "MGDA_UB"
 LOSS:
-  KP_2D_W: 300.0
-  KP_3D_W: 300.0
-  SHAPE_W: 0.06
-  POSE_W: 60.0
-  D_MOTION_LOSS_W: 0.0
+  KP_2D_W: 1.
+  KP_3D_W: 1.
+  SHAPE_W: 1.
+  POSE_W: 1.
+  D_MOTION_LOSS_W: 1.
 TRAIN:
   BATCH_SIZE: 32
   NUM_ITERS_PER_EPOCH: 500
@@ -27,9 +27,9 @@ TRAIN:
   PRETRAINED_REGRESSOR: 'data/base_data/spin_model_checkpoint.pth.tar'
   RESUME: ''
   START_EPOCH: 0
-  END_EPOCH: 100
+  END_EPOCH: 200
   LR_DECAY: 0.316
-  LR_PATIENCE: 5
+  LR_PATIENCE: 10
   DATA_2D_RATIO: 0.6
   OVERLAP: true
   DATASETS_2D:
