--- a/configs/repr_table6_h36m_model.yaml
+++ b/configs/repr_table6_h36m_model.yaml
@@ -9,6 +9,11 @@ NUM_WORKERS: 16
 SEED_VALUE: 1
 DATASET:
   SEQLEN: 16
+UPDATE_GRAD: False
+NORM_TYPE: "none"
+MTL: True
+MTL_START: 15
+MTL_METHOD: "MGDA_UB"
 LOSS:
   KP_2D_W: 300.0
   KP_3D_W: 300.0
